--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta name="google-site-verification" content="tEx4NyIGAZDUj9NmCpUv8_V3788n0-dFclq7o4r-ld0" />
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
   <title>Custom Earmolds and Earplugs for Better Comfort and Protection</title>
